fixed fonts sizes

--- a/src/pages/Products.html
+++ b/src/pages/Products.html
@@ -132,7 +132,8 @@
           <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
             The Arcadian Curve
           </h1>
-          <p class="text-white font-FertigoPro">
+          <p
+            class="text-white font-FertigoPro smallPhone:text-xs smallTablet:text-base">
             Nestled amidst the dense foliage of the Carpathian Mountains, this
             visionary abode offers a serene retreat from the world. The
             structure boasts a sleek, elongated form that curves gently, echoing
@@ -166,7 +167,8 @@
           <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
             Zenith Haven
           </h1>
-          <p class="text-white font-FertigoPro">
+          <p
+            class="text-white font-FertigoPro smallPhone:text-xs smallTablet:text-base">
             Emerging from the misty Carpathian landscape, this avant-garde
             dwelling, with its commanding cantilevered roofs, stands as a
             testament to architectural innovation. The juxtaposition of the
@@ -200,7 +202,8 @@
           <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
             Cliffside Lumina
           </h1>
-          <p class="text-white font-FertigoPro">
+          <p
+            class="text-white font-FertigoPro smallPhone:text-xs smallTablet:text-base">
             Perched atop a rugged cliff, this modern architectural masterpiece
             stands as a beacon of contemporary luxury against the dramatic
             backdrop of mountain and sea. The house, with its clean lines and
@@ -235,7 +238,8 @@
           <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
             Emerald Whisper
           </h1>
-          <p class="text-white font-FertigoPro">
+          <p
+            class="text-white font-FertigoPro smallPhone:text-xs smallTablet:text-base">
             This architectural marvel, cloaked in the enigmatic hues of
             twilight, stands as a bold statement of modernity amidst the
             whispering pines. Its striking contrast of vibrant teal and warm
