--- a/src/pages/Services.html
+++ b/src/pages/Services.html
@@ -136,7 +136,7 @@
                       ><img
                         class="rounded-xl aspect-video"
                         src="../assets/images/House01.png"
-                        alt=""
+                        alt="Arcadian Curve"
                     /></span>
                   </td>
                   <td class="py-4 px-6 text-xs">
@@ -177,7 +177,7 @@
                       ><img
                         class="rounded-xl aspect-video"
                         src="../assets/images/House02.png"
-                        alt=""
+                        alt="Zenith Haven"
                     /></span>
                   </td>
                   <td class="py-4 px-6 text-xs">
@@ -215,7 +215,7 @@
                       ><img
                         class="rounded-xl aspect-video"
                         src="../assets/images/House03.png"
-                        alt=""
+                        alt="Cliffside Lumina"
                     /></span>
                   </td>
                   <td class="py-4 px-6 text-xs">
@@ -254,7 +254,7 @@
                       ><img
                         class="rounded-xl aspect-video"
                         src="../assets/images/Hero.png"
-                        alt=""
+                        alt="Emerald Whisper"
                     /></span>
                   </td>
                   <td class="py-4 px-6 text-xs">
@@ -289,8 +289,7 @@
           </div>
 
           <!-- Grid Table implementation starts -->
-          <div
-            class="grid gap-4 smallPhone::grid-cols-2 smallTablet:grid-cols-2 laptop:hidden">
+          <div class="grid gap-4 smallTablet:grid-cols-2 laptop:hidden">
             <div class="bg-gray-800 rounded-xl p-4">
               <img
                 src="../assets/images/House01.png"
