added transition effects to buttons

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <!-- Sign Up Start -->
           <a
-            class="bg-yellow-500 text-black phone:active:bg-black phone:active:text-yellow-500 rounded-lg px-5 py-2"
+            class="bg-yellow-500 text-black phone:active:bg-black phone:active:text-yellow-500 rounded-lg px-5 py-2 transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300"
             href="/src/pages/Sign-up.html"
             >Sign up</a
           >
@@ -136,7 +136,7 @@
           </p>
           <div class="w-full h-[60px] flex justify-center">
             <button
-              class="border-2 border-slate-100 rounded-2xl px-3 phone:active:bg-black phone:active:text-yellow-500 phone:bg-yellow-500 phone:text-black laptop:hover:bg-yellow-500 laptop:hover:text-black mt-5 laptop:text-white laptop:bg-transparent">
+              class="border-2 border-slate-100 rounded-2xl px-3 phone:active:bg-black phone:active:text-yellow-500 phone:bg-yellow-500 phone:text-black laptop:hover:bg-yellow-500 laptop:hover:text-black mt-5 laptop:text-white laptop:bg-transparent transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
               <a href="./src/pages/Products.html">Choose your dreamhouse now</a>
             </button>
           </div>
