improved carousel buttons positioning

--- a/src/pages/Products.html
+++ b/src/pages/Products.html
@@ -54,7 +54,7 @@
 
           <!-- Sign Up Start -->
           <a
-            class="bg-yellow-500 text-black phone:active:bg-black phone:active:text-yellow-500 rounded-lg px-5 py-2 transition ease-in-out delay-150  hover:-translate-y-1 hover:scale-110  duration-300"
+            class="bg-yellow-500 text-black phone:active:bg-black phone:active:text-yellow-500 rounded-lg px-5 py-2 transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300"
             href="/src/pages/Sign-up.html"
             >Sign up</a
           >
@@ -115,20 +115,19 @@
         <div
           class="w-full max-w-[800px] h-[700px] bg-transparent/40 backdrop-blur-lg border-2 border-slate-400 rounded-2xl p-10 overflow-y-scroll no-scrollbar">
           <div
-            class="relative Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House01.png')] bg-cover bg-center"></div>
+            class="relative Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House01.png')] bg-cover bg-center">
+            <button
+              class="absolute top-1 right-1 smallTablet:translate-x-[40px] smallTablet:translate-y-[120px] smallPhone:translate-x-[40px] smallPhone:translate-y-[80px]">
+              <i
+                class="fa-solid fa-square-caret-right text-4xl text-yellow-500 hover:animate-pulse"></i>
+            </button>
 
-          <button
-            class="absolute top-1 right-1 smallTablet:translate-y-[170px] smallPhone:translate-y-[120px]">
-            <i
-              class="fa-solid fa-square-caret-right text-4xl text-yellow-500 hover:animate-pulse"></i>
-          </button>
-
-          <button
-            class="absolute top-1 left-1 smallTablet:translate-y-[170px] smallPhone:translate-y-[120px]">
-            <i
-              class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500 hover:animate-pulse"></i>
-          </button>
-
+            <button
+              class="absolute top-1 left-1 smallTablet:-translate-x-[40px] smallTablet:translate-y-[120px] smallPhone:-translate-x-[40px] smallPhone:translate-y-[80px]">
+              <i
+                class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500 hover:animate-pulse"></i>
+            </button>
+          </div>
           <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
             The Arcadian Curve
           </h1>
@@ -150,20 +149,20 @@
 
           <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
 
-          <button
-            class="absolute top-1 right-1 smallTablet:translate-y-[850px] smallPhone:translate-y-[890px]">
-            <i
-              class="fa-solid fa-square-caret-right text-4xl text-yellow-500"></i>
-          </button>
-
-          <button
-            class="absolute top-1 left-1 smallTablet:translate-y-[850px] smallPhone:translate-y-[890px]">
-            <i
-              class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500"></i>
-          </button>
-
           <div
-            class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House02.png')] bg-cover bg-center"></div>
+            class="relative Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House02.png')] bg-cover bg-center">
+            <button
+              class="absolute top-1 right-1 smallTablet:translate-x-[40px] smallTablet:translate-y-[120px] smallPhone:translate-x-[40px] smallPhone:translate-y-[80px]">
+              <i
+                class="fa-solid fa-square-caret-right text-4xl text-yellow-500 hover:animate-pulse"></i>
+            </button>
+
+            <button
+              class="absolute top-1 left-1 smallTablet:-translate-x-[40px] smallTablet:translate-y-[120px] smallPhone:-translate-x-[40px] smallPhone:translate-y-[80px]">
+              <i
+                class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500 hover:animate-pulse"></i>
+            </button>
+          </div>
           <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
             Zenith Haven
           </h1>
@@ -185,20 +184,20 @@
 
           <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
 
-          <button
-            class="absolute top-1 right-1 smallTablet:translate-y-[1450px] smallPhone:translate-y-[1590px]">
-            <i
-              class="fa-solid fa-square-caret-right text-4xl text-yellow-500"></i>
-          </button>
-
-          <button
-            class="absolute top-1 left-1 smallTablet:translate-y-[1450px] smallPhone:translate-y-[1590px]">
-            <i
-              class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500"></i>
-          </button>
-
           <div
-            class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House03.png')] bg-cover bg-center"></div>
+            class="relative Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House03.png')] bg-cover bg-center">
+            <button
+              class="absolute top-1 right-1 smallTablet:translate-x-[40px] smallTablet:translate-y-[120px] smallPhone:translate-x-[40px] smallPhone:translate-y-[80px]">
+              <i
+                class="fa-solid fa-square-caret-right text-4xl text-yellow-500 hover:animate-pulse"></i>
+            </button>
+
+            <button
+              class="absolute top-1 left-1 smallTablet:-translate-x-[40px] smallTablet:translate-y-[120px] smallPhone:-translate-x-[40px] smallPhone:translate-y-[80px]">
+              <i
+                class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500 hover:animate-pulse"></i>
+            </button>
+          </div>
           <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
             Cliffside Lumina
           </h1>
@@ -221,20 +220,20 @@
 
           <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
 
-          <button
-            class="absolute top-1 right-1 smallTablet:translate-y-[2120px] smallPhone:translate-y-[2300px]">
-            <i
-              class="fa-solid fa-square-caret-right text-4xl text-yellow-500"></i>
-          </button>
-
-          <button
-            class="absolute top-1 left-1 smallTablet:translate-y-[2120px] smallPhone:translate-y-[2300px]">
-            <i
-              class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500"></i>
-          </button>
-
           <div
-            class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[400px] rounded-xl bg-[url('/src/assets/images/Hero.png')] bg-cover bg-center"></div>
+            class="relative Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[400px] rounded-xl bg-[url('/src/assets/images/Hero.png')] bg-cover bg-center">
+            <button
+              class="absolute top-1 right-1 smallTablet:translate-x-[40px] smallTablet:translate-y-[180px] smallPhone:translate-x-[40px] smallPhone:translate-y-[80px]">
+              <i
+                class="fa-solid fa-square-caret-right text-4xl text-yellow-500 hover:animate-pulse"></i>
+            </button>
+
+            <button
+              class="absolute top-1 left-1 smallTablet:-translate-x-[40px] smallTablet:translate-y-[180px] smallPhone:-translate-x-[40px] smallPhone:translate-y-[80px]">
+              <i
+                class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500 hover:animate-pulse"></i>
+            </button>
+          </div>
           <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
             Emerald Whisper
           </h1>
