added footer, final commit

--- a/src/pages/Products.html
+++ b/src/pages/Products.html
@@ -256,6 +256,9 @@
       </section>
 
       <!-- Hero section end -->
+      <footer class="text-white text-xs pt-4">
+        © Zenith Living Designs 2023 - All rights reserved
+      </footer>
     </section>
     <!-- Container end -->
   </body>
