--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         </div>
       </section>
       <!-- Hero section end -->
+      <footer class="text-white text-xs pt-4">
+        © Zenith Living Designs 2023 - All rights reserved
+      </footer>
     </section>
     <!-- Container end -->
   </body>
