--- a/src/pages/About.html
+++ b/src/pages/About.html
@@ -54,7 +54,7 @@
 
           <!-- Sign Up Start -->
           <a
-            class="bg-yellow-500 text-black phone:active:bg-black phone:active:text-yellow-500 rounded-lg px-5 py-2 transition ease-in-out delay-150  hover:-translate-y-1 hover:scale-110  duration-300"
+            class="bg-yellow-500 text-black phone:active:bg-black phone:active:text-yellow-500 rounded-lg px-5 py-2 transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300"
             href="/src/pages/Sign-up.html"
             >Sign up</a
           >
@@ -143,6 +143,9 @@
         </div>
       </section>
       <!-- About section ends -->
+      <footer class="text-white text-xs pt-4">
+        © Zenith Living Designs 2023 - All rights reserved
+      </footer>
     </section>
     <!-- Container end -->
   </body>
