--- a/src/pages/Sign-up.html
+++ b/src/pages/Sign-up.html
@@ -170,6 +170,9 @@
       </form>
       </section>
       <!-- Register section end -->
+      <footer class="text-white text-xs pt-4">
+        © Zenith Living Designs 2023 - All rights reserved
+      </footer>
     </section>
     <!-- Container end -->
   </body>
