--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
             <li>
               <a
                 class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
-                href="/src/pages/../../index.html"
+                href="./index.html"
                 >Home</a
               >
             </li>
             <li>
               <a
                 class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
-                href="/src/pages/Services.html"
+                href="./src/pages/Services.html"
                 >Services</a
               >
             </li>
             <li>
               <a
                 class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
-                href="/src/pages/Products.html"
+                href="./src/pages/Products.html"
                 >Products</a
               >
             </li>
             <li>
               <a
                 class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
-                href="/src/pages/About.html"
+                href="./src/pages/About.html"
                 >About Us</a
               >
             </li>
@@ -81,14 +81,14 @@
                 </li>
                 <li>
                   <a
-                    href="/src/pages/Services.html"
+                    href="./src/pages/Services.html"
                     class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500"
                     >Services</a
                   >
                 </li>
                 <li>
                   <a
-                    href="/src/pages/Products.html"
+                    href="./src/pages/Products.html"
                     class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500"
                     >Products</a
                   >
@@ -96,7 +96,7 @@
 
                 <li>
                   <a
-                    href="/src/pages/About.html"
+                    href=".src/pages/About.html"
                     class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
                     >About</a
                   >
